# 3DScanner-ROS

./: README.md
docker/: Dockerfile  docker-compose.yaml  setup.cfg  setup.py
docker/stl27l_driver/stl27l_driver/: __init__.py  driver_node.py
ros2_ws/src/piscanner_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/piscanner_bringup/config/: scanner_parameters.yaml
ros2_ws/src/piscanner_bringup/launch/: piscanner.launch.py
ros2_ws/src/piscanner_control/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/piscanner_control/piscanner_control/: __init__.py  motor_node.py  stepper_driver.py
ros2_ws/src/piscanner_control/piscanner_control/srv/: __init__.py
ros2_ws/src/piscanner_control/resource/: piscanner_control
ros2_ws/src/piscanner_control/srv/: ConfigureScan.srv
ros2_ws/src/piscanner_perception/: package.xml  setup.cfg  setup.py
ros2_ws/src/piscanner_perception/piscanner_perception/: __init__.py  color_maps.py  geometry.py  pointcloud_node.py
ros2_ws/src/piscanner_perception/resource/: piscanner_perception
ros2_ws/src/piscanner_perception/tests/: test_geometry.py
scanner/: lidar.py  pointcloud.py  scanner.py  stepper.py
scripts/: run_scan.py
tests/: conftest.py  test_pointcloud.py  test_scanner.py
