# Konfigurationsdatei für setuptools, damit das ROS2-Paket korrekt installiert wird.
# Die Kommentare erklären die wichtigsten Felder und sollen den Einstieg erleichtern.

[metadata]
name = stl27l_driver
version = 0.1.0
maintainer = OpenAI Demo
maintainer_email = demo@example.com
description = Beispielhafter ROS2-Treiber für den STL27L-LiDAR
license = MIT

[options]
packages = find:
install_requires =
    rclpy
    numpy
zip_safe = false

[options.entry_points]
console_scripts =
    driver_node = stl27l_driver.driver_node:main
