<?xml version="1.0"?>
<!--
    package.xml beschreibt Abhängigkeiten des ROS2-Pakets `piscanner_control`.
    Kommentare erläutern, warum bestimmte Dependencies deklariert werden.
-->
<package format="3">
  <name>piscanner_control</name>
  <version>0.1.0</version>
  <description>ROS2 Steuerungspaket für den Pi-basierten 3D-Scanner.</description>
  <maintainer email="demo@example.com">OpenAI Demo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>rpi.gpio</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
