# setup.cfg enthält alle Metadaten und Entry-Points für das Paket.

[metadata]
name = piscanner_control
version = 0.1.0
author = OpenAI Demo
author_email = demo@example.com
license = MIT

[options]
packages = find:
install_requires =
    rclpy
    std_msgs
    std_srvs
zip_safe = false

[options.data_files]
share/ament_index/resource_index/packages = resource/piscanner_control
share/piscanner_control = package.xml
share/piscanner_control/srv = srv/ConfigureScan.srv

[options.entry_points]
console_scripts =
    stepper_motor_node = piscanner_control.motor_node:main
