<?xml version="1.0"?>
<!--
    Paketbeschreibung für die Wahrnehmungskomponenten.
-->
<package format="3">
  <name>piscanner_perception</name>
  <version>0.1.0</version>
  <description>Fusion von LiDAR-, Motor- und Kameradaten für den 3D-Scanner.</description>
  <maintainer email="demo@example.com">OpenAI Demo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
