# Metadaten und Installationseinstellungen für `piscanner_perception`.

[metadata]
name = piscanner_perception
version = 0.1.0
author = OpenAI Demo
author_email = demo@example.com
license = MIT

[options]
packages = find:
install_requires =
    rclpy
    sensor_msgs
    std_msgs
    std_srvs
    numpy
    Pillow
zip_safe = false

[options.data_files]
share/ament_index/resource_index/packages = resource/piscanner_perception
share/piscanner_perception = package.xml

[options.entry_points]
console_scripts =
    pointcloud_builder_node = piscanner_perception.pointcloud_node:main
